--- a/distros/ubuntu/22.04 - jammy/Dockerfile
+++ b/distros/ubuntu/22.04 - jammy/Dockerfile
@@ -5,10 +5,10 @@ FROM ubuntu:22.04
 RUN apt-get update && apt-get install -y apt-utils
 
 # Run the command to list all packages
-RUN apt-cache dumpavail > /jammy-packages.txt
+RUN apt-cache dumpavail > /ubuntu-jammy-packages.txt
 
 # Export the generated file outside the container
-VOLUME /jammy-packages.txt:/jammy-packages.txt
+VOLUME /ubuntu-jammy-packages.txt:/ubuntu-jammy-packages.txt
 
 # Specify the default command to run when the container starts
-CMD ["cat", "/jammy-packages.txt"]
+CMD ["cat", "/ubuntu-jammy-packages.txt"]
