--- a/distros/debian/v11 - bullseye/Dockerfile
+++ b/distros/debian/v11 - bullseye/Dockerfile
@@ -5,10 +5,10 @@ FROM debian:bullseye
 RUN apt-get update && apt-get install -y apt-utils
 
 # Run the command to list all packages
-RUN apt-cache dumpavail > /bullseye-packages.txt
+RUN apt-cache dumpavail > /debian-bullseye-packages.txt
 
 # Export the generated file outside the container
-VOLUME /bullseye-packages.txt:/bullseye-packages.txt
+VOLUME /debian-bullseye-packages.txt:/debian-bullseye-packages.txt
 
 # Specify the default command to run when the container starts
-CMD ["cat", "/bullseye-packages.txt"]
+CMD ["cat", "/debian-bullseye-packages.txt"]
