feat: ubuntu parser finished with csv

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 # C extensions
 *.so
 
+# ubuntu.csv in ./distros/ubuntu
+ubuntu-packages.csv
 # Distribution / packaging
 .Python
 build/
