--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-pandas
-numpy
+version https://git-lfs.github.com/spec/v1
+oid sha256:7a0dc6f6e4c94c62ab3deec2afcaa8e64cc2d0f405db3a0e4abdc55207132c4e
+size 13
